* still working on ssl

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>3000.gov.tw</title>
-  <meta property="og:url" content="https://3000.gov.tw/">
+  <meta property="og:url" content="http://3000.gov.tw/">
   <style>
     body { margin: 0; padding: 0; overflow: hidden; }
     iframe {
