--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>3000.gov.tw</title>
+  <title>三倍券 — Triple Stimulus Vouchers</title>
   <meta property="og:url" content="http://3000.gov.tw/">
+  <meta property="og:description" content="好領，好用，好刺激 — Starting July, Triple Stimulus Vouchers are available to the 23 million people of Taiwan 🇹🇼, as well as 150K spouses from overseas with residency permits.">
+  <meta name="description" content="好領，好用，好刺激 — Starting July, Triple Stimulus Vouchers are available to the 23 million people of Taiwan 🇹🇼, as well as 150K spouses from overseas with residency permits.">
+    <meta name="twitter:title" content="三倍券 — Triple Stimulus Vouchers">
+    <meta name="twitter:image" content="http://3000.gov.tw/tsv.jpg">
+    <meta property="og:image" itemprop="image" content="http://3000.gov.tw/tsv.jpg">
   <style>
     body { margin: 0; padding: 0; overflow: hidden; }
     iframe {
@@ -32,6 +37,7 @@
 <body>
 <center>
 <!--  <img src="" style="position: absolute; width: 100%; left: 0; top: 0"> -->
+<img src="tsv.jpg" style="width: 350px; height: 350px">
   <div class="container">
     <div id="CDT"></div>
   </div>
