--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta property="og:description" content="好領，好用，好刺激 — Starting July, Triple Stimulus Vouchers are available to the 23 million people of Taiwan 🇹🇼, as well as 150K spouses from overseas with residency permits.">
   <meta name="description" content="好領，好用，好刺激 — Starting July, Triple Stimulus Vouchers are available to the 23 million people of Taiwan 🇹🇼, as well as 150K spouses from overseas with residency permits.">
     <meta name="twitter:title" content="三倍券 — Triple Stimulus Vouchers">
-    <meta name="twitter:image" content="http://3000.gov.tw/tsv.jpg">
-    <meta property="og:image" itemprop="image" content="http://3000.gov.tw/tsv.jpg">
+    <meta name="twitter:image" content="http://3000.gov.tw/og.jpg">
+    <meta property="og:image" itemprop="image" content="http://3000.gov.tw/og.jpg">
   <style>
     body { margin: 0; padding: 0; overflow: hidden; }
     iframe {
