--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
   <div class="container">
     <div id="CDT"></div>
   </div>
+
+  <p style="margin-top: 200px">This website launches at June 15 — Pre-order begins July 1 — The stimulus program starts July 15.</p>
 </center>
 </body>
 </html>
