--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 <center>
 <!--  <img src="" style="position: absolute; width: 100%; left: 0; top: 0"> -->
 <img src="tsv.jpg" style="width: 350px; height: 350px">
-  <div class="container">
+  <div class="">
     <div id="CDT"></div>
   </div>
 
-  <p style="margin-top: 200px">Website launches June 15 — Pre-order begins July 1 — The stimulus program starts July 15.</p>
+  <p style="margin-top: 10px">Website launches June 15 — Pre-order begins July 1 — The stimulus program starts July 15.</p>
 </center>
 </body>
 </html>
