--- a/index.html
+++ b/index.html
@@ -45,5 +45,24 @@
 
   <p style="margin-top: 10px">Website launches June 15 — Pre-order begins July 1 — The stimulus program starts July 15.</p>
 </center>
+<footer>
+<p xmlns:dct="http://purl.org/dc/terms/" xmlns:vcard="http://www.w3.org/2001/vcard-rdf/3.0#">
+  <a rel="license"
+     href="http://creativecommons.org/publicdomain/zero/1.0/">
+    <img src="http://i.creativecommons.org/p/zero/1.0/88x31.png" style="border-style: none;" alt="CC0" />
+  </a>
+  <br />
+  To the extent possible under law,
+  <a rel="dct:publisher"
+     href="https://english.ey.gov.tw">
+    <span property="dct:title">the Executive Yuan</span></a>
+  has waived all copyright and related or neighboring rights to
+  <span property="dct:title">creative contents on 3000.gov.tw</span>.
+This work is published from:
+<span property="vcard:Country" datatype="dct:ISO3166"
+      content="TW" about="http://3000.gov.tw">
+  Taiwan</span>.
+</p>
+</footer>
 </body>
 </html>
