--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:image" itemprop="image" content="http://3000.gov.tw/og.jpg">
   <style>
     body { margin: 0; padding: 0; overflow: hidden; }
+a { color: #888 }
     iframe {
       position: absolute;
       border: 0 !important;
@@ -49,7 +50,7 @@
 <p xmlns:dct="http://purl.org/dc/terms/" xmlns:vcard="http://www.w3.org/2001/vcard-rdf/3.0#">
   <a rel="license"
      href="http://creativecommons.org/publicdomain/zero/1.0/">
-    <img src="http://i.creativecommons.org/p/zero/1.0/88x31.png" style="border-style: none;" alt="CC0" />
+    <img src="cc0.png" style="border-style: none;" alt="CC0" />
   </a>
   <br />
   To the extent possible under law,
@@ -57,7 +58,7 @@
      href="https://english.ey.gov.tw">
     <span property="dct:title">the Executive Yuan</span></a>
   has waived all copyright and related or neighboring rights to
-  <span property="dct:title">creative contents on 3000.gov.tw</span>.
+  <a href="https://github.com/PDIS/3000-static"><span property="dct:title">creative content on 3000.gov.tw</span></a>.
 This work is published from:
 <span property="vcard:Country" datatype="dct:ISO3166"
       content="TW" about="http://3000.gov.tw">
