--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@ a { color: #888 }
 <body>
 <center>
 <!--  <img src="" style="position: absolute; width: 100%; left: 0; top: 0"> -->
-<img src="tsv.jpg" style="width: 350px; height: 350px">
+<img src="tsv.jpg" width="350" height="350">
   <div class="">
-    <div id="CDT"></div>
+    <div id="CDT" style="height: 82px"></div>
   </div>
 
   <p style="margin-top: 10px">Website launches June 15 — Pre-order begins July 1 — The stimulus program starts July 15.</p>
@@ -50,7 +50,7 @@ a { color: #888 }
 <p xmlns:dct="http://purl.org/dc/terms/" xmlns:vcard="http://www.w3.org/2001/vcard-rdf/3.0#">
   <a rel="license"
      href="http://creativecommons.org/publicdomain/zero/1.0/">
-    <img src="cc0.png" style="border-style: none;" alt="CC0" />
+    <img src="cc0.png" style="border-style: none;" alt="CC0" width="88" height="31" />
   </a>
   <br />
   To the extent possible under law,
