--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>三倍券 — Triple Stimulus Vouchers</title>
+  <title>振興三倍券 — Triple Stimulus Vouchers</title>
   <meta property="og:url" content="http://3000.gov.tw/">
   <meta property="og:description" content="好領，好用，好刺激 — Starting July, Triple Stimulus Vouchers are available to the 23 million people of Taiwan 🇹🇼, as well as 150K spouses from overseas with residency permits.">
+    <link href="favicon.png" rel="icon" type="image/x-icon">
   <meta name="description" content="好領，好用，好刺激 — Starting July, Triple Stimulus Vouchers are available to the 23 million people of Taiwan 🇹🇼, as well as 150K spouses from overseas with residency permits.">
     <meta name="twitter:title" content="三倍券 — Triple Stimulus Vouchers">
     <meta name="twitter:image" content="http://3000.gov.tw/og.jpg">
@@ -38,7 +39,7 @@ a { color: #888 }
 
 <body>
 <center>
-<!--  <img src="" style="position: absolute; width: 100%; left: 0; top: 0"> -->
+<img src="bg.jpg" style="position: absolute; width: 100%; left: 0; top: 0; z-index: -999">
 <img src="tsv.jpg" width="350" height="350">
   <div class="">
     <div id="CDT" style="height: 82px"></div>
