--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ a { color: #888 }
 
 <body>
 <center>
-<img src="bg.jpg" style="position: absolute; width: 100%; left: 0; top: 0; z-index: -999">
+<img src="bg.jpg" style="position: absolute; width: 100%; height: 100%; left: 0; top: 0; z-index: -999">
 <img src="tsv.jpg" width="350" height="350">
   <div class="">
     <div id="CDT" style="height: 82px"></div>
