* that's it for today

--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@ a { color: #888 }
     <div id="CDT" style="height: 82px"></div>
   </div>
 
-  <p style="margin-top: 10px">Website launches June 15 — Pre-order begins July 1 — The stimulus program starts July 15.</p>
+<img src="mini-logo.png"><br>
+  <p style="">Website launches June 15 — Pre-order begins July 1 — The stimulus program starts July 15.</p>
 </center>
 <footer>
 <p xmlns:dct="http://purl.org/dc/terms/" xmlns:vcard="http://www.w3.org/2001/vcard-rdf/3.0#">
   <a rel="license"
      href="http://creativecommons.org/publicdomain/zero/1.0/">
-    <img src="cc0.png" style="border-style: none;" alt="CC0" width="88" height="31" />
+    <img src="cc0.png" style="border-style: none; display: none" alt="CC0" width="88" height="31" />
   </a>
-  <br />
   To the extent possible under law,
   <a rel="dct:publisher"
      href="https://english.ey.gov.tw">
