--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>振興三倍券 — Triple Stimulus Vouchers</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <meta property="og:url" content="http://3000.gov.tw/">
   <meta property="og:description" content="好領，好用，好刺激 — Starting July, Triple Stimulus Vouchers are available to the 23 million people of Taiwan 🇹🇼, as well as 150K spouses from overseas with residency permits.">
     <link href="favicon.png" rel="icon" type="image/x-icon">
