--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta property="og:image" itemprop="image" content="http://3000.gov.tw/og.jpg">
   <style>
-    body { margin: 0; padding: 0; overflow: hidden; }
+    body { margin: 0; padding: 0; }
 a { color: #888 }
     iframe {
       position: absolute;
@@ -41,7 +41,7 @@ a { color: #888 }
 
 <body>
 <center>
-<img src="bg.jpg" style="position: absolute; width: 100%; height: 100%; left: 0; top: 0; z-index: -999">
+<img src="bg.jpg" style="position: fixed; width: 100%; height: 100%; left: 0; top: 0; z-index: -999">
 <img src="tsv.jpg" width="350" height="350">
   <div class="">
     <div id="CDT" style="height: 82px"></div>
