* align MOFA text

--- a/index-en.html
+++ b/index-en.html
@@ -7179,8 +7179,7 @@
                                                                                                                             15</strong>
                                                                                                                     </p>
 
-                                                                                                                    <p>You may pre-order your vouchers from this website and designate at which convenience store you want to pick them up. You may pay online
-                                                                                                                        or at the counter of the convenience store after printing out a payment slip at its self-service kiosk.
+                                                                                                                    <p><strong>Citizens and spouses from overseas with residency permits</strong> may pre-order vouchers from this website and designate at which convenience store to pick them up. Pay online or at the counter of the convenience store after printing out a payment slip at its self-service kiosk.
                                                                                                                     </p>
 
                                                                                                                     <p><strong>July
@@ -7221,7 +7220,7 @@
                                                                                                             <div class="in">
                                                                                                                 <div class="soon-p">
                                                                                                                     <p>Starting from
-                                                                                                                        <strong>July 1</strong> , eligible R.O.C. citizens and foreign nationals may link one of their credit cards to the voucher program
+                                                                                                                        <strong>July 1</strong> , eligible R.O.C. citizens and spouses from overseas with residency permits may link one of their credit cards to the voucher program
                                                                                                                         through this website. Those who spend for
                                                                                                                         <strong>NT$3,000</strong> by
                                                                                                                         <strong>31st
@@ -7245,7 +7244,7 @@
                                                                                                                 <div class="soon-p">
                                                                                                                     <p>From
                                                                                                                         <strong>July
-                                                                                                                        1 onwards,</strong>                                                                                                                        eligible R.O.C. citizens and foreign nationals may link a name-based card to the voucher program through this website. Those who spend
+                                                                                                                        1 onwards,</strong>                                                                                                                        eligible R.O.C. citizens and spouses from overseas with residency permits may link a name-based card to the voucher program through this website. Those who spend
                                                                                                                         for
                                                                                                                         <strong>NT$3,000</strong> by
                                                                                                                         <strong>31st December 2020</strong> will be notified,
@@ -7276,7 +7275,7 @@
                                                                                                                 <div class="soon-p">
                                                                                                                     <p>From
                                                                                                                         <strong>July
-                                                                                                                        1 onwards,</strong>                                                                                                                        eligible R.O.C. citizens and foreign nationals may link their preferred mobile payment app to the voucher program through this website.
+                                                                                                                        1 onwards,</strong>                                                                                                                        eligible R.O.C. citizens and spouses from overseas with residency permits may link their preferred mobile payment app to the voucher program through this website.
                                                                                                                         Those who spend for
                                                                                                                         <strong>NT$3,000</strong> by
                                                                                                                         <strong>31st December 2020</strong> will be notified,
