* align MOFA text

--- a/index.html
+++ b/index.html
@@ -7166,7 +7166,7 @@
                                                                                                                     <p style="font-size:1.2em;"><strong>7/1-7/15</strong>
                                                                                                                     </p>
 
-                                                                                                                    <p>到本網站預購，並指定領取超商，可以在網站上直接繳費、也可以去超商事務機印繳費單到櫃檯繳費。
+                                                                                                                    <p><b>國民、有居留權的配偶</b>到本網站預購，並指定領取超商，可以在網站上直接繳費、也可以去超商事務機印繳費單到櫃檯繳費。
                                                                                                                     </p>
 
                                                                                                                     <p style="font-size:1.2em;"><strong>7/15後</strong>
@@ -7203,7 +7203,7 @@
                                                                                                                 <div class="soon-p">
                                                                                                                     <p>
                                                                                                                         <p class="hd">
-                                                                                                                            <span style="color:#c2103b;">符合領取資格的國民或者外籍人士</span>
+                                                                                                                            <span style="color:#c2103b;">國民、有居留權的配偶</span>
                                                                                                                         </p>
                                                                                                                         <ul style="font-size: 1.2em">
                                                                                                                             <li><strong>7/1</strong>起到本網站綁定信用卡</li>
@@ -7229,7 +7229,7 @@
                                                                                                                 <div class="soon-p">
                                                                                                                     <p>
                                                                                                                         <p class="hd">
-                                                                                                                            <span style="color:#c2103b;">符合領取資格的國民或者外籍人士</span>
+                                                                                                                            <span style="color:#c2103b;">國民、有居留權的配偶</span>
                                                                                                                         </p>
                                                                                                                         <ul style="font-size: 1.2em">
                                                                                                                             <li><strong>7/1</strong>起到本網站綁定實名制卡片<strong></strong></li>
@@ -7258,7 +7258,7 @@
                                                                                                                 <div class="soon-p">
                                                                                                                     <p>
                                                                                                                         <p class="hd">
-                                                                                                                            <span style="color:#c2103b;">符合領取資格的國民或者外籍人士</span>
+                                                                                                                            <span style="color:#c2103b;">國民、有居留權的配偶</span>
                                                                                                                         </p>
                                                                                                                         <ul style="font-size: 1.2em">
                                                                                                                             <li><strong>7/1</strong>起到本網站綁定</li>
