* more case sensitivity

--- a/index-en.html
+++ b/index-en.html
@@ -3311,7 +3311,7 @@
     /* line 434, ../sass/_base-layout.scss */
     
     .comingsoon>.in>.ct>.in .group-list.major-slider {
-        /* background-image: url("../Images/bg.jpg"); */
+        /* background-image: url("../images/bg.jpg"); */
         height: 100vh;
         background-size: cover;
         background-position: top left;
@@ -5780,7 +5780,7 @@
         display: block;
         background-color: #ffffff;
         margin: 0 auto;
-        background-image: url(../Images/icon-pic/away-b-top.png);
+        background-image: url(../images/icon-pic/away-b-top.png);
         background-repeat: no-repeat;
         background-position: center;
     }
@@ -7007,7 +7007,7 @@
                                                                                                         <div class="ct">
                                                                                                             <div class="in">
                                                                                                                 <span style="background-image: url('../images/bg02.jpg');">
-                                                                                                                    <img src="../Images/coming_en.png" alt="">
+                                                                                                                    <img src="../images/coming_en.png" alt="">
                                                                                                                 </span>
                                                                                                             </div>
                                                                                                         </div>
@@ -7020,7 +7020,7 @@
                                                                                                         <div class="ct">
                                                                                                             <div class="in">
                                                                                                                 <span style="background-image: url('../images/bg03.jpg');">
-                                                                                                                    <img src="../Images/coming_en.png" alt="">
+                                                                                                                    <img src="../images/coming_en.png" alt="">
                                                                                                                 </span>
                                                                                                             </div>
                                                                                                         </div>
@@ -7033,7 +7033,7 @@
                                                                                                         <div class="ct">
                                                                                                             <div class="in">
                                                                                                                 <span style="background-image: url('../images/bg04.jpg');">
-                                                                                                                    <img src="../Images/coming_en.png" alt="">
+                                                                                                                    <img src="../images/coming_en.png" alt="">
                                                                                                                 </span>
                                                                                                             </div>
                                                                                                         </div>
@@ -7046,7 +7046,7 @@
                                                                                                         <div class="ct">
                                                                                                             <div class="in">
                                                                                                                 <span style="background-image: url('../images/bg.jpg');">
-                                                                                                                    <img src="../Images/coming_en.png" alt="">
+                                                                                                                    <img src="../images/coming_en.png" alt="">
                                                                                                                 </span>
                                                                                                             </div>
                                                                                                         </div>
@@ -7256,8 +7256,8 @@
 
                                                                                                                     <p class="hd"> Eligible cards </p>
 
-                                                                                                                    <p><img alt="card01" src="../Images/card01.png" style="margin: 5px; width: 20%;"><img alt="card02" src="../Images/card02.png" style="margin: 5px; width: 20%;">
-                                                                                                                        <img alt="card03" src="../Images/card03.png" style="margin: 5px; width: 20%;"><img alt="card04" src="../Images/card04.png" style="width: 20%; margin: 5px;">
+                                                                                                                    <p><img alt="card01" src="../images/card01.png" style="margin: 5px; width: 20%;"><img alt="card02" src="../images/card02.png" style="margin: 5px; width: 20%;">
+                                                                                                                        <img alt="card03" src="../images/card03.png" style="margin: 5px; width: 20%;"><img alt="card04" src="../images/card04.png" style="width: 20%; margin: 5px;">
                                                                                                                     </p>
                                                                                                                 </div>
                                                                                                             </div>
