--- a/index.html
+++ b/index.html
@@ -6875,7 +6875,7 @@
     </title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link id="likCss" rel="stylesheet" media="screen" href="./css/global.css?1090612051443" type="text/css">
+    <link id="likCss" rel="stylesheet" media="screen" href="css/global.css?1090612051443" type="text/css">
     <link href="./css/sys_index.css" rel="stylesheet" type="text/css">
     <link href="../images/favicon.ico" rel="icon" type="image/x-icon">
     <link href="https://hscp-ws.hamastar.com.tw/001/administrator/3035/sites/pagebackimage/6baf54d5-0b15-466d-93b4-31994d63f562.png" rel="icon" type="image/x-icon">
