頁面些微調整

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                                                                                                                             <p> </p>
                                                                                                                             <li><strong>12/31</strong>前累計消費滿 3,000 元</li>
                                                                                                                             <p> </p>
-                                                                                                                            <li>即可領取 $2,000 現金回饋，回饋將採用支付方式的 app 通知</li>
+                                                                                                                            <li>即可領取 2,000 元 現金回饋，回饋將採用支付方式的 app 通知</li>
                                                                                                                         </ul>
                                                                                                                     </p>
                                                                                                                 </div>
