--- a/index-en.html
+++ b/index-en.html
@@ -536,9 +536,9 @@
 </body>
 
 <script>
-    var lis = document.querySelectorAll(".js-toggle-title > li");
-    var contents = document.querySelectorAll(".js-toggle-content > li");
-    var carousels = document.querySelectorAll(".js-carousel > li");
+    var lis = $(".js-toggle-title > li");
+    var contents = $(".js-toggle-content > li");
+    var carousels = $(".js-carousel > li");
     var currentLiIndex = 0;
     var current = 1
     var timer = 0;
@@ -548,55 +548,55 @@
 
         scrollToBottom();
 
-        var self = this;
+        var self = $(this);
 
-        lis.forEach(function(item) {
-            if (item.dataset.index === self.dataset.index) {
-                currentLiIndex = parseInt(self.dataset.index, 10) + 1;
-                self.classList.add("is-active");
+        lis.each(function (key, element) {
+            if ($(element).data("index") == self.data("index")) {
+                currentLiIndex = parseInt(self.data("index"), 10) + 1;
+                $(self).addClass("is-active");
             } else {
-                item.classList.remove("is-active");
+                $(element).removeClass("is-active");
             }
         });
 
-        contents.forEach(function(content) {
-            if (parseInt(content.dataset.index, 10) === 1) {
+        contents.each(function (key, element) {
+            if (parseInt($(element).data("index"), 10) == 1) {
                 return;
             }
 
-            if (parseInt(content.dataset.index, 10) === currentLiIndex) {
-                content.style.display = "list-item";
+            if (parseInt($(element).data("index"), 10) == currentLiIndex) {
+                $(element).css("display", "list-item");
             } else {
-                content.style.display = "none";
+                $(element).css("display", "none");
             }
         });
     }
 
     function scrollToBottom() {
-        if (document.body.clientHeight + document.body.scrollTop !== document.body.scrollHeight) {
-            window.scroll({
-                top: document.body.scrollHeight,
-                behavior: 'smooth',
-            });
+        if (document.body.clientHeight + document.body.scrollTop != document.body.scrollHeight) {
+            $("body").animate({
+                scrollTop: document.body.scrollHeight
+            }, 1000);
         }
     }
 
-    lis.forEach(function(item) {
-        item.addEventListener("click", toggleClass);
+    lis.each(function (key, element) {
+        $(element).on("click", toggleClass);
     });
+    
 
-    timer = setInterval(function() {
+    timer = setInterval(function () {
         if (current === carousels.length) {
             current = 1;
         }
 
         current++;
 
-        carousels.forEach(function(carousel) {
-            if (parseInt(carousel.dataset.index, 10) === current) {
-                carousel.style.display = "list-item"
+        carousels.each(function (key, element) {
+            if (parseInt($(element).data("index"), 10) == current) {
+                $(element).css("display", "list-item");
             } else {
-                carousel.style.display = "none";
+                $(element).css("display", "none");
             }
         });
     }, 5000);
