--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
     <link href="css/global.css" rel="stylesheet" type="text/css">
     <link href="./images/favicon.ico" rel="icon" type="image/x-icon">
     <link href="https://hscp-ws.hamastar.com.tw/001/administrator/3035/sites/pagebackimage/6baf54d5-0b15-466d-93b4-31994d63f562.png" rel="icon" type="image/x-icon">
-    <meta property="og:title" content="行政院振興方案網站">
+    <meta property="og:title" content="振興三倍券">
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://hic-pthg.hamastar.com.tw/stimulus/ShuntPage.aspx?ccms_cs=1">
-    <meta property="og:site_name" content="行政院振興方案網站">
+    <meta property="og:url" content="https://3000.gov.tw">
     <style type="text/css">
         .fancybox-margin {
             margin-right: 0px;
