--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
     <meta property="og:title" content="振興三倍券">
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://3000.gov.tw">
+    <meta property="og:image" content="./images/bg02.jpg">
+    <meta property="og:description" content="提供快速瀏覽並申請台灣振興三倍券服務。">
+    <meta name="twitter:card" content="./images/bg02.jpg">
+    <meta name="twitter:title" content="振興三倍券">
+    <meta name="twitter:description" content="提供快速瀏覽並申請台灣振興三倍券服務。">
     <style type="text/css">
         .fancybox-margin {
             margin-right: 0px;
