--- a/index-en.html
+++ b/index-en.html
@@ -398,7 +398,7 @@
                                                                                                                         &nbsp;Eligibility&nbsp;
                                                                                                                     </p>
                                                                                                                     <p><strong>July 1 Onwards</strong></p>
-                                                                                                                    <p>both Taiwanese citizens and foreign spouses who hold Alien Resident Certificates (ARCs) are eligible to purchase the vouchers.
+                                                                                                                    <p>Both Taiwanese citizens and foreign spouses who hold Alien Resident Certificates (ARCs) are eligible to purchase the vouchers.
                                                                                                                     </p>
                                                                                                                     <p>&nbsp;</p>
                                                                                                                     <p class="hd">
